Revert "Workaround conda-build bug not recognizing {{native}}"
This reverts commit fe75546fe803de7edfb203726062440d95d83ed9.

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -96,16 +96,15 @@ requirements:
     - libcurl                            # [not win]
     - xz                                 # [not win]
     - libpng                             # [not win]
-    - bzip2                              # [not win]
-    - {{native}}bzip2                    # [win]
-    - cairo                              # [not win]
+    - {{native}}bzip2                    # [not win]
+    - {{native}}bzip2 1.0.*              # [win]
+    - {{native}}cairo                    # [not win]
     - {{native}}libjpeg-turbo            # [win]
-    - jpeg                               # [not win]
-    - libiconv                           # [osx]
-    - {{native}}libiconv                 # [win]
-    - libuuid                            # [linux]
+    - {{native}}jpeg                     # [not win]
+    - {{native}}libiconv                 # [not linux]
+    - {{native}}libuuid                  # [linux]
     - {{native}}gmp                      # [win]
-    - glib                               # [linux]
+    - {{native}}glib                     # [linux]
     - {{native}}fftw                     # [win]
     - {{native}}xz                       # [win]
     - {{native}}mpfr                     # [win]
@@ -113,41 +112,36 @@ requirements:
     - {{native}}bwidget
     - {{native}}tktable
     - {{native}}libpng                   # [win]
-    - pango                              # [not win]
-    - {{native}}icu                      # [win]
-    - icu                                # [not win]
+    - {{native}}pango                    # [not win]
+    - {{native}}icu
     - {{native}}pcre
-    - tk                                 # [not win]
-    - {{native}}tk                       # [win]
-    - {{native}}zlib                     # [win]
-    - zlib                               # [not win]
-    - {{native}}gsl                      # [win]
-    - gsl                                # [not win]
-    - {{native}}libtiff                  # [win]
-    - libtiff                            # [not win]
+    - {{native}}tk
+    - {{native}}zlib 1.2.8               # [win]
+    - {{native}}zlib                     # [not win]
+    - {{native}}gsl
+    - {{native}}libtiff >=4.0.3,<4.0.8   # [win]
+    - {{native}}libtiff                  # [not win]
     - {{native}}libxml2                  # [win]
-    - libxml2                            # [not win]
-    - libssh2                            # [not win]
-    - krb5                               # [not win]
-    - {{native}}openblas                 # [win]
-    - openblas                           # [not win]
-
+    - {{native}}libxml2                  # [not win]
+    - {{native}}libssh2                  # [not win]
+    - {{native}}krb5                     # [not win]
+    - {{native}}openblas
 
   run:
     - _r-mutex 1.* anacondar_1
     - {{ pin_compatible("msys2-conda-epoch", exact=True) }}  # [win]
     # Needed by R CMD javareconf
     - make                               # [not win]
-    - {{ compiler('fortran') }}          # [not win and c_compiler!='toolchain_c']
-    - {{ compiler('cxx') }}              # [not win and c_compiler!='toolchain_c']
-    - {{ compiler('c') }}                # [not win and c_compiler!='toolchain_c']
+    - {{ compiler('fortran') }}          # [not win]
+    - {{ compiler('cxx') }}              # [not win]
+    - {{ compiler('c') }}                # [not win]
     - {{ pin_compatible('llvm-openmp', max_pin=None) }}      # [osx]
     - {{native}}gcc-libs                 # [win]
     - curl                               # [not win]
     - {{native}}bzip2                    # [win]
     - {{native}}libjpeg-turbo            # [win]
     - {{native}}libiconv                 # [win]
-    - libuuid                            # [linux]
+    - {{native}}libuuid                  # [linux]
     - {{native}}gmp                      # [win]
     - {{native}}fftw                     # [win]
     - {{native}}xz                       # [win]
